Archive2/4b/86550fcc83c758/output
main.cpp:1:1: error: 'string' does not name a type
 string Chiper(string phrase,int K)
 ^
